# momai-whatsapp-extension

./: .gitignore  .nojekyll  CHANGELOG.md  EXTENSIONS_PLAN.md  LICENSE  README.en-US.md  README.md  SKILL.md  background-worker.js  baileys-cred-migration.js  blog.html  brain.md  build.mjs  changelog.html  contato.html  docs.json  fs-permissions.js  index.html  manifest.json  momai.bat  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  register_identity.py  registry.json  reset_onboarding.py  runtime.js  secure-storage-bridge.js  styles.css  test_out.txt  test_out_2.txt  test_out_2_ascii.txt  test_out_ascii.txt  tsconfig.json  turbo.json  verify_venv.py
apps/core/: .gitignore  AI_core.py  README.md  agents.py  app_cache.py  app_state.py  checkpoints.db-shm  checkpoints.db-wal  create_extension.py  downloader.py  ext_data.json  graph.py  local_model.py  main.py  models.py  p.txt  package.json  pyproject.toml  reminders_manager.py  runtime.py  startup.py  tools.py  tts_manager.py  wake_word.py
apps/core/agents/builtin/interface/: manifest.json  skill.md
apps/core/ai/: constants.py  embeddings.py  orchestrator.py  tool_selector.py
apps/core/ai/graph/: nodes.py  workflow.py
apps/core/ai/providers/: local_llama.py
apps/core/api/: deps.py  router.py  schemas.py
apps/core/api/routes/: chat.py  diagnostic.py  extensions.py  gaming.py  hardware.py  init_status.py  memory.py  mode.py  reminders.py  settings.py  setup.py  status.py  voice.py  ws.py
apps/core/data/: momai_identity.txt
apps/core/database/: models.py  vector_db.py
apps/core/domain/: manifest.py  skill.py
apps/core/notes/: 157b2715-2453-45b8-a970-02da76d3f4c2.md  identity-manual.md
apps/core/services/extensions/: base.py  hooks.py  installer.py  manager.py
apps/core/services/memory/: external_memory.py
apps/core/services/reminders/: manager.py
apps/core/services/system/: briefing.py  resource_manager.py
apps/core/services/voice/: detector.py  quick_transcriber.py  tts.py
apps/core/skills/interface/: tools.py
apps/core/skills/responder/: tools.py
apps/core/skills/scheduler/: skill.md  tools.py
apps/core/skills/search/: skill.md  tools.py
apps/core/skills_extensions/app_launcher/: manifest.json  plugin.py
apps/core/skills_extensions/env_test/: manifest.json
apps/core/tools/: system_actions.py
apps/core/utils/: downloader.py  i18n.py  indexer.py  safe_tools.py  tokenizer.py
(+149 files in other folders)
