[project]
name = "core"
version = "0.1.0"
description = "MomAI Core"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "langchain[google-genai]>=1.2.4",
    "llama-cpp-python>=0.3.16",
    "huggingface-hub>=1.3.2",
    "langchain-community>=0.4.1",
]
