[project]
name = "core"
version = "0.1.0"
description = "MomAI Core"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "langchain[google-genai]>=1.2.4",
    "llama-cpp-python>=0.3.16",
    "huggingface-hub>=1.3.2",
    "langchain-community>=0.4.1",
    "edge-tts>=7.2.7",
    "langchain-groq>=1.1.1",
    "duckduckgo-search>=8.1.1",
    "ddgs>=9.10.0",
    "pygetwindow>=0.0.9",
    "langchain-openai>=1.1.7",
    "pygame>=2.6.1",
    "psutil>=7.2.1",
    "speechrecognition>=3.14.5",
    "pyaudio>=0.2.14",
    "vosk>=0.3.45",
    "pvporcupine>=4.0.1",
    "sounddevice>=0.5.4",
]
