[project]
name = "core"
version = "0.1.0"
description = "MomAI Core"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "langchain[google-genai]>=1.2.4",
    "huggingface-hub>=1.3.2",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.1",
    "duckduckgo-search>=8.1.1",
    "ddgs>=9.10.0",
    "pygetwindow>=0.0.9",
    "langchain-openai>=1.1.7",
    "psutil>=7.2.1",
    "speechrecognition>=3.14.5",
    "pyaudio>=0.2.14",
    "pvporcupine>=4.0.1",
    "sounddevice>=0.5.4",
    "langgraph>=1.0.6",
    "apscheduler>=3.11.2",
    "sqlalchemy>=2.0.45",
    "dateparser>=1.2.2",
    "beautifulsoup4>=4.14.3",
    "requests>=2.32.5",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "aiosqlite>=0.22.1",
    "rich>=14.2.0",
    "lancedb>=0.27.0",
    "pyarrow>=23.0.0",
    "pluggy>=1.6.0",
    "kokoro>=0.9.4",
    "torch>=2.10.0",
    "soundfile>=0.13.1",
    "faster-whisper>=1.2.1",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["ai*", "api*", "agents*", "database*", "domain*", "services*", "tools*", "utils*"]
exclude = ["data*", "notes*", "models*", "momai_db*"]
